// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Normal textarea renders correctly 1`] = `
<textarea
  className="lui-textarea"
  value="Value"
/>
`;

exports[`Textarea passes props correctly 1`] = `
<textarea
  className="lui-textarea my-class"
  data-x="x"
  onClick={[MockFunction]}
  title="Title"
  value="Value"
/>
`;

exports[`Textarea with modifiers renders correctly 1`] = `
<textarea
  className="lui-textarea lui-textarea--inverse"
  value="Value"
/>
`;

exports[`Textarea with states renders correctly 1`] = `
<textarea
  className="lui-textarea lui-invalid"
  disabled={true}
  value="Value"
/>
`;

exports[`Textarea with states renders correctly 2`] = `
<textarea
  active={true}
  className="lui-textarea"
  disabled={true}
  value="Value"
/>
`;
